k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-intelligence
  labels:
    name: web-intelligence
